--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 						    </div>
 						    <div class="collapse" id="collapseFour" role="tabpanel" aria-labelledby="headingTwo">
 						      <div class="card-body py-3 px-0">
-						      	<p>Você também vai receber acesso a descontos exclusivos a mais de 10 mil locais de compras e entreternimento</p>
+						      	<p>Você também vai receber acesso a descontos exclusivos a mais de 10 mil locais de compras e entretenimento</p>
 						      </div>
 						    </div>
 						  </div>
@@ -426,7 +426,7 @@
 												<ul class="list-unstyled">
 						              <li><a href="#saude" class="py-1 d-block">Saúde</a></li>
 						              <li><a href="#saude" class="py-1 d-block">Compras</a></li>
-						              <li><a href="#saude" class="py-1 d-block">Entreternimento </a></li>
+						              <li><a href="#saude" class="py-1 d-block">Entretenimento </a></li>
 						              <li><a href="#saude" class="py-1 d-block">Filmes</a></li>
 						            </ul>
 											</div>
