--- a/public/form_sind.html
+++ b/public/form_sind.html
@@ -57,7 +57,7 @@
 	        			<li class="nav-item"><a href="#cartao" class="nav-link">Cartão</a></li>
 	        			<li class="nav-item"><a href="#planos" class="nav-link">Planos</a></li>
 	        			<li class="nav-item"><a href="#" class="nav-link">Benefícios</a></li>
-						<li class="nav-item"><a href="../form_sind.html" target="blank" class="nav-link">Sindicato</a></li>
+						<li class="nav-item"><a href="public/form_sind.html" target="blank" class="nav-link">Sindicato</a></li>
 	        			<li class="nav-item"><a href="#" class="nav-link">Aréa do Cliente</a></li>
                         <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
                         <li class="nav-item"><a href="https://cartaomasterclin.com.br/usuarios/validar-cartao" target="_blank" class="nav-link">Validador</a></li>
