--- a/public/form_sind.html
+++ b/public/form_sind.html
@@ -226,7 +226,7 @@
 
 										<div class="col-md-6"> 
 											<div class="form-group">																						
-												<a href="../pdf/form_sindicato.pdf" target="_blank" class="btn btn-sm btn-info">Visualizar termos de uso</a>
+												<a href="http://cartaosaudeprevencao.com.br/public/images/pdf/sindicato_contrato.pdf" target="_blank" class="btn btn-sm btn-info">Visualizar termos de uso</a>
 											</div>
 										</div>													
 
