--- a/public/form_sind.html
+++ b/public/form_sind.html
@@ -57,7 +57,7 @@
 	        			<li class="nav-item"><a href="http://www.cartaosaudeprevencao.com.br/#cartao" class="nav-link">Cartão</a></li>
 	        			<li class="nav-item"><a href="http://www.cartaosaudeprevencao.com.br/#planos" class="nav-link">Planos</a></li>
 	        			<!-- <li class="nav-item"><a href="#" class="nav-link">Benefícios</a></li> -->
-						<li class="nav-item"><a href="http://www.cartaosaudeprevencao.com.br/public/form_sind.html" target="blank" class="nav-link">Sindicato</a></li>
+						<li class="nav-item"><a href="http://www.cartaosaudeprevencao.com.br/public/form_sind.html" class="nav-link">Sindicato</a></li>
 	        			<!-- <li class="nav-item"><a href="#" class="nav-link">Aréa do Cliente</a></li> -->
                         <li class="nav-item"><a href="http://www.cartaosaudeprevencao.com.br/#contato" class="nav-link">Contato</a></li>
                         <li class="nav-item"><a href="https://cartaomasterclin.com.br/usuarios/validar-cartao" target="_blank" class="nav-link">Validador</a></li>
@@ -396,6 +396,8 @@
 							</div>
 						</div>
 					</div>
+				</div>
+					</div>
 					<div class="row">
 						<div class="col-md-3 mb-md-0 mb-3">
 							<h2 class="footer-heading">Endereço</h2>
@@ -436,8 +438,6 @@
 						</div>
 					</div>
 				</div>		
-			</div>
-		</div>
 	</footer>
 
 <!-- loader -->
